[package]
name = "zccache-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Background daemon for the zccache compiler cache"


[lib]
name = "zccache_daemon"
path = "src/lib.rs"

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { workspace = true }
libc = "0.2"

[[bin]]
name = "zccache-daemon"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sysinfo = "0.33"
zccache-core = { workspace = true }
zccache-protocol = { workspace = true }
zccache-ipc = { workspace = true }
zccache-fscache = { workspace = true }
zccache-artifact = { workspace = true }
zccache-watcher = { workspace = true }
zccache-hash = { workspace = true }
zccache-compiler = { workspace = true }
zccache-depgraph = { workspace = true }
zccache-fingerprint = { workspace = true }
running-process-core = { workspace = true }
filetime = { workspace = true }
dashmap = { workspace = true }
rayon = { workspace = true }
bincode = { workspace = true }
serde_json = "1"
# Signal/exception handler that catches SIGSEGV/SIGABRT/SIGILL/etc. on
# Unix and structured exceptions on Windows — covers the FFI/abort gap
# the Rust panic hook can't see. The handler currently writes a text
# dump (same format as the panic hook) into a `.dmp`-suffixed file so a
# future swap to Breakpad minidump format via minidump-writer is purely
# additive — no test or filename-convention churn.
crash-handler = "0.6"
# Cross-platform primitives for triggering specific crash kinds; used by
# the `crash-trigger` test fixture binary. Tiny crate, regular dep
# rather than dev-dep so the [[bin]] target can see it.
sadness-generator = "0.6"

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = { workspace = true }
zccache-test-support = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "crash-trigger"
path = "src/bin/crash_trigger.rs"

[[bench]]
name = "write_payloads"
harness = false

[[bench]]
name = "read_outputs"
harness = false

[[bench]]
name = "persist_payloads"
harness = false
