[package]
name = "zccache-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Background daemon for the zccache compiler cache"


[lib]
name = "zccache_daemon"
path = "src/lib.rs"

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { workspace = true }
libc = "0.2"

[[bin]]
name = "zccache-daemon"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sysinfo = "0.33"
zccache-monocrate = { workspace = true }
zccache-depgraph = { workspace = true }
zccache-fingerprint = { workspace = true }
running-process-core = { workspace = true }
filetime = { workspace = true }
dashmap = { workspace = true }
rayon = { workspace = true }
bincode = { workspace = true }
serde_json = "1"
# Signal/exception handler facade lives in `zccache-core::crash`. The
# daemon's `crash` module re-exports the install entry points so legacy
# callers keep compiling; see issue #313 for the consolidation.
# Cross-platform primitives for triggering specific crash kinds; used by
# the `crash-trigger` test fixture binary. Tiny crate, regular dep
# rather than dev-dep so the [[bin]] target can see it.
sadness-generator = "0.6"

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
zccache-monocrate = { workspace = true, features = ["test-support"] }

[[bin]]
name = "crash-trigger"
path = "src/bin/crash_trigger.rs"

[[bench]]
name = "write_payloads"
harness = false

[[bench]]
name = "read_outputs"
harness = false

[[bench]]
name = "persist_payloads"
harness = false
