[package]
name = "zccache-depgraph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true


[dependencies]
zccache-core = { path = "../zccache-core" }
zccache-hash = { path = "../zccache-hash" }
blake3 = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }
