[package]
name = "zccache-depgraph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Dependency graph tracking for zccache cache invalidation"


[dependencies]
zccache-monocrate = { workspace = true }
blake3 = { workspace = true }
dashmap = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rkyv = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scan_recursive"
harness = false
