[package]
name = "zccache-depgraph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Dependency graph and include-aware invalidation for zccache"
publish = false

[dependencies]
zccache-core = { workspace = true }
zccache-hash = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
dashmap = { workspace = true }
rayon = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
filetime = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
