[package]
name = "zccache-download-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "CLI for the zccache download daemon"

[dependencies]
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
zccache-download = { workspace = true }
zccache-download-client = { workspace = true }

[[bin]]
name = "zccache-download"
path = "src/main.rs"
doc = false
