[package]
name = "zccache-download-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Rust client API for the zccache download daemon"

[dependencies]
tokio = { workspace = true, features = ["rt", "net", "io-util", "macros", "time", "fs"] }
zccache-core = { workspace = true }
zccache-ipc = { workspace = true }
zccache-download = { workspace = true }
zccache-download-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
fs2 = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
ruzstd = { workspace = true }
"lzma-rs" = { workspace = true }
sevenz-rust = { workspace = true }

[dev-dependencies]
dashmap = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
zccache-download-daemon = { workspace = true }
