[package]
name = "zccache-download-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Dedicated per-user download daemon for zccache"

[dependencies]
tokio = { workspace = true, features = ["full"] }
dashmap = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zccache-core = { workspace = true }
zccache-ipc = { workspace = true }
zccache-download = { workspace = true }
zccache-download-protocol = { workspace = true }
tokio-util = { workspace = true }

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { workspace = true }

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true }

[[bin]]
name = "zccache-download-daemon"
path = "src/main.rs"

