[package]
name = "zccache-download-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Protocol messages for the zccache download daemon"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
zccache-download = { workspace = true }
zccache-core = { workspace = true }
