[package]
name = "zccache-download-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Download daemon protocol types and daemon management helpers for zccache"
publish = false

[dependencies]
zccache-core = { workspace = true }
zccache-download = { workspace = true }

bincode = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
