[package]
name = "zccache-download"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core download engine and types for zccache downloads"

[dependencies]
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt", "time"] }
serde = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tokio-util = { workspace = true }
blake3 = { workspace = true }
zccache-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
