[package]
name = "zccache-download"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Download engine and shared download types for zccache"
publish = false

[dependencies]
zccache-core = { workspace = true }

blake3 = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
