[package]
name = "zccache-fingerprint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true


[lib]
name = "zccache_fingerprint"
crate-type = ["cdylib", "lib"]

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { workspace = true }

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true }

[[bin]]
name = "zccache-fp"
path = "src/main.rs"

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
clap = { workspace = true }
zccache-hash = { path = "../zccache-hash" }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = "2"
fs2 = "0.4"
globset = "0.4"
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = { workspace = true }
