[package]
name = "zccache-fingerprint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "File fingerprinting engine and CLI for zccache"


[lib]
name = "zccache_fingerprint"
crate-type = ["cdylib", "lib"]

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { workspace = true }

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true }

[[bin]]
name = "zccache-fp"
path = "src/main.rs"

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
clap = { workspace = true }
zccache-core = { workspace = true }
zccache-hash = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tracing = { workspace = true }
jwalk = { workspace = true }
rayon = { workspace = true }
fs2 = "0.4"
globset = "0.4"
pyo3 = { version = "0.23", features = ["extension-module", "generate-import-lib", "abi3-py310"], optional = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fingerprint"
harness = false

[build-dependencies]
pyo3-build-config = "0.23"
