[package]
name = "zccache-fingerprint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Fingerprint engine and PyO3 extension module for zccache"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
zccache-core = { workspace = true }
zccache-hash = { workspace = true }
fs2 = { workspace = true }
globset = "0.4"
jwalk = { workspace = true }
pyo3 = { version = "0.23", features = [
    "extension-module",
    "generate-import-lib",
    "abi3-py310",
], optional = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.23"

[lints]
workspace = true
