[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "zccache-fingerprint"
version = "1.1.15"
description = "Fast file fingerprinting backed by blake3"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"

[tool.maturin]
features = ["python"]
module-name = "zccache.fingerprint._native"
python-source = "python"
manifest-path = "Cargo.toml"
