[package]
name = "zccache-gha"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GitHub Actions Cache API client for zccache"

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
