[package]
name = "zccache-hash"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Hashing utilities and cache key builders for zccache"
publish = false

[dependencies]
blake3 = { workspace = true }
memmap2 = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
