[package]
name = "zccache-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true


[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
zccache-protocol = { path = "../zccache-protocol" }
