[package]
name = "zccache-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Internal IPC transport and daemon connection helpers for zccache"
publish = false

[dependencies]
zccache-core = { workspace = true }
zccache-protocol = { workspace = true }

bytes = { workspace = true }
dashmap = { workspace = true }
interprocess = "2.4.2"
prost = { workspace = true }
running-process = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["tracing"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
zccache-depgraph = { workspace = true }

[lints]
workspace = true
