[package]
name = "zccache-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "IPC message protocol for zccache"


[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
zccache-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
