[package]
name = "zccache-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Shared test utilities for zccache crates"


[dependencies]
zccache-monocrate = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

# Tiny helper binary used by `wrapper_passthrough` (and any future test
# that needs to assert byte-for-byte stdio round-trip through the
# wrapper). Reads stdin to EOF, writes deterministic markers + the
# stdin payload to stdout/stderr, then exits with a chosen code.
[[bin]]
name = "echo_shim"
path = "src/bin/echo_shim.rs"
