[package]
name = "zccache-watcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Filesystem watching subsystem for zccache"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
python = ["dep:pyo3"]

[dependencies]
notify = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
zccache-core = { workspace = true }
zccache-fscache = { workspace = true }
pyo3 = { version = "0.23", features = ["extension-module", "generate-import-lib", "abi3-py310"], optional = true }
jwalk = { workspace = true }
globset = "0.4"
rayon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
zccache-hash = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scan_metadata"
harness = false

[build-dependencies]
pyo3-build-config = "0.23"
